chore: change package name
package name changed `it.dohyun.plugin.*` to `it.dohyun.nms.*`

--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
-name: Plugin
+name: NMS
 version: '${project.version}'
-main: it.dohyun.plugin.Plugin
+main: it.dohyun.nms.NMS
 authors: [ Green0121 ]
 website: https://github.com/past2l
