feat: add `JSON` util

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -116,6 +116,11 @@
         </dependency>
 
         <!-- Other Util -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20230227</version>
+        </dependency>
 
         <!-- Kotlin -->
         <dependency>
